# moonpay

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.json  config.mk
include/: CapMessageDirector.h  CapMessageDirectorFunction.h  CapMessageGameDataChecker.h  CapMessageLayout.h  CapMessageShowInfo.h  keyboard.hpp
include/agl/: DrawContext.h  RenderBuffer.h  RenderTargetColor.h  RenderTargetDepth.h  TextureData.h  TextureSampler.h  g3d.h  gpu.h  util.h  utl.h
include/agl/detail/: FileIOMgr.h  MemoryPool.h  MemoryPoolHeap.h  PrivateResource.h  ShaderHolder.h  Surface.h
include/agl/driver/: NVNimage.h  NVNsampler.h  NVNtexture.h
include/agl/g3d/: g3d_ResFile.h
include/agl/shader/: Shader.h  ShaderCompileInfo.h  ShaderProgram.h  ShaderProgramArchive.h
include/agl/shtxt/: Clause.h  DefineLinker.h  ExpressionEvaluator.h  Lexer.h  Preprocessor.h  SyntaxTree.h
include/al/: ParameterBase.h  util.hpp
include/al/area/: ChangeStageInfo.h
include/al/camera/: CameraViewInfo.h  ProjectCameraInput.h
include/al/factory/: CameraPoserFactory.h  Factory.h
include/game/Actors/: ChurchDoor.h  CoinCollect.h  CoinStackGroup.h  IUseDemoSkip.h  KuriboHack.h  LifeMaxUpItem.h  LifeMaxUpItem2D.h  ReflectBombGenerator.h  Shine.h  ShineTowerRocket.h
include/game/Controller/: ControllerAppletFunction.h
include/game/GameData/: GameDataFile.h  GameDataFunction.h  GameDataHolder.h  GameDataHolderAccessor.h  GameDataHolderBase.h  GameDataHolderWriter.h  GameProgressData.h  SaveDataAccessFunction.h  UniqueObjInfo.h
include/game/HakoniwaSequence/: HakoniwaSequence.h  HakoniwaStateBootLoadData.h  HakoniwaStateDeleteScene.h  HakoniwaStateDemoEnding.h  HakoniwaStateDemoOpening.h  HakoniwaStateDemoWorldWarp.h  HakoniwaStateSimpleDemo.h
include/game/Info/: QuestInfo.h  QuestInfoHolder.h  ShineInfo.h
include/game/InformationMovie/: InformationMovieUpdater.h
include/game/Input/: InputSeparator.h
include/game/Interfaces/: IUseDimension.h  IUsePlayerCollision.h  IUsePlayerHack.h
include/game/Layouts/: CoinCounter.h  CommonVerticalList.h
include/game/Player/: CapFunction.h  HackCap.h  HackCapThrowParam.h  IUsePlayerPuppet.h  PlayerActorBase.h  PlayerActorHakoniwa.h  PlayerAnimControlRun.h  PlayerAnimFrameCtrl.h  PlayerAnimator.h  PlayerCameraTarget.h  PlayerCollider.h  PlayerColliderHakoniwa.h  PlayerConst.h  PlayerCostumeInfo.h  PlayerCounterIceWater.h  PlayerDamageKeeper.h  PlayerFormSensorCollisionArranger.h  PlayerFunction.h  PlayerHackKeeper.h  PlayerInfo.h  PlayerInitInfo.h  PlayerInput.h  PlayerInputFunction.h  PlayerJointControlGroundPose.h  PlayerJointControlPartsDynamics.h  PlayerJointControlSwimPose.h  PlayerModelChangerHakoniwa.h  PlayerModelHolder.h  PlayerPuppet.h  (+4 more)
include/nn/: account.h  os.h  socket.hpp  time.hpp
include/rs/: util.hpp
include/sead/: textwriter.h
misc/npdm-json/: application.json  qlaunch.json
misc/scripts/: tcpServer.py
source/: types.h
source/logger/: Logger.cpp  Logger.hpp
source/program/: Keyboard.cpp  main.cpp  patches.cpp  setting.hpp
(+176 files in other folders)
